# AI_tescher_student

./: .env  .env.example  .gitignore  ACTIVITY_TRACKING.md  API_DOCUMENTATION.md  CHANGES_SUMMARY.md  CHAT_SESSION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  README_AUTH.md  RECENT_ACTIVITY_API_EXAMPLE.md  SETUP.md  TOPIC_EXTRACTION_USAGE.md  add_performance_to_existing.py  app.py  cleanup_old_chat_sessions.py  debug_vector_search.py  enable_global_rag.py  fix_active_sessions.py  global_prompts_backup.json  init_database.py  main.py  migrate_auth.py  postman-test-plan-b2f8b0.md  postman_testing_guide.md  pyproject.toml  requirements.txt  server.txt  sync_existing_chat_sessions.py  test_activity.py  test_agent_sessions.py  test_api_response.py  test_async_improvements.py  test_document_api.py  test_performance_optimization.py  test_realistic_activity.py  test_rl_integration.py  test_rl_state.py  (+2 more)
.md/: API_DOCUMENTATION.md  BOOKMARK_USAGE_GUIDE.md  PERFORMANCE_API_OPTIMIZATION.md  README_AUTH.md  enhanced-similarity-search-usage-2ed9f4.md  how-search-works-2ed9f4.md  vector-search-architecture-example-2ed9f4.md  vector-search-functions-calls-returns-2ed9f4.md
TTS/: aud.py  tts.py  tts_service.py
Teacher_AI_Agent/: .env  __init__.py  main.py  model_cache.py  routes.py
cheking/: .env  agent.py  agent2.py  graph.py  litLLM.py  llm.py  supporting_agent.py  test.py  tools.py
data/: feedback.json  val_rl.json
docs/: API.md
routes/: admin.py  agent_performance.py  all_agents_performance.py  auth.py  performance_cache.py  performance_middleware.py  run.py  sample.txt  startup.py  student.py  vectors.py
routes/admin/: __init__.py  (+3 more)
scripts/: add_performance_to_existing.py  init_database.py  migrate_auth.py
src/: main.py
studentAgent/: callStAgent.py  run_single_queryFun.py  student_agent.py
studentProfileDetails/: activity_tracker.py  concept_diagnosis_agent.py  db_utils.py  dependencies.py  dpo_trainer.py  evaluation_agent.py  feedback_handler.py  generate_response_with_groq.py  getprefrance.py  global_prompts.py  global_settings.py  handle_general_cht.py  intentBasedAgent.py  intent_handlers.py  language_detector.py  learning_progress.py  log.json  mongoQueryRun.py  prompt_templates.py  quizHelper.py  quiz_generator.py  run_STagent.py  run_apiST.py  sample_math_queries.md  streamlit_app.py  studentMemory.py  studyPlane.py  summrizeStdConv.py
(+192 files in other folders)
