[project]
name = "langchain-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.10.0",
    "docx>=0.2.4",
    "fastapi>=0.128.0",
    "fitz>=0.0.1.dev2",
    "geopy>=2.4.1",
    "langchain>=1.2.6",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.0",
    "litellm>=1.81.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pymongo>=4.16.0",
    "pymupdf>=1.26.7",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
    "streamlit>=1.53.1",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]
